<resources>
    <string name="app_name">1ml</string>
    <string name="title_activity_dashbord">Dashbord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ab_list_title">manoharfadf</string>
    <string name="btn_referearntitle_text">Refer friends &amp; Earn</string>
    <string name="btn_proceed_text">PROCEED</string>
    <string name="Rs">\u20B9</string>
    <string name="edt_otp">OTP</string>
    <string name="mandatory_field1">Field with <font color="#EE0000">*</font> are Mandatory</string>
    <string name="search_hint">search medicine</string>
    <string name="By_thyrocare"><u><i>By Thyrocare Lab</i></u></string>
    <string name="log_out_user">Log out user</string>
    <string name="search_hint_q">Search here</string>
    <string name="default_notification_channel_id">default</string>
    <string name="edt_username_hint">Full name</string>
    <string name="edt_email_hint">Email</string>
    <string name="edt_phone_hint">Phone</string>
    <string name="edt_address_hint">Address</string>
    <string name="edt_weight_hint">Weight</string>
    <string name="edt_height_hint">height</string>
    <string name="edt_emergency_contact_no_hint">Emergency Contact Number</string>
    <string name="edt_emergency_contact_name_hint">Emergency Contact Name</string>
    <string name="edt_dob_hint">Date OF Birth</string>
    <string name="edt_city_hint">City</string>
    <string name="your_string"><u>have a referral code ?</u></string>
    <string name="your_refralcode">referral code</string>
    <string name="menu_main_myaccount">MY ACCOUNT</string>
    <string name="menu_referandearn">Refer &amp; Earn</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_main_sercices">SERVICES</string>
    <string name="menu_nearstorelocator">Nearest Store Locator</string>
    <string name="menu_blood">Nearest Blood Bank</string>
    <string name="menu_ambulance">Nearest Ambulance</string>
    <string name="menu_doctor">Nearest Doctor</string>
    <string name="menu_lab">Nearest Lab</string>
    <string name="menu_imagecenter">Nearest Imaging Center</string>
    <string name="menu_main_medicines">MEDICINES</string>
    <string name="menu_findmedicine">Find Medicine</string>
    <string name="menu_substitutes">Find Substitutes</string>
    <string name="menu_prescription">Order with Prescription</string>
    <string name="menu_pillreminder">Pill Reminder</string>
    <string name="menu_main_doctor">DOCTOR</string>
    <string name="menu_finddoctor">Find Doctor</string>
    <string name="menu_appointment">My Appointment</string>
    <string name="menu_doctorchat">Doctor with Chat</string>
    <string name="menu_consultclinic">Consult on Clinic</string>
    <string name="menu_textconsult">Chat Consult</string>
    <string name="menu_phoneconsult">Phone Consult</string>
    <string name="menu_videoconsult">Video Consult</string>
    <string name="menu_emargencyconsult">Emergency Consult</string>
    <string name="menu_main_tabtest">LAB TEST</string>
    <string name="menu_booktabtest">Book Lab Test</string>
    <string name="menu_bookimaging">Book X-Ray</string>
    <string name="menu_treatments">Treatments</string>
    <string name="menu_prescriptions">Prescriptions</string>
    <string name="menu_Documents">Documents</string>
    <string name="menu_main_others">OTHERS</string>
    <string name="menu_needhelp">Need Help?</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_storeoffers">Store Offers</string>
    <string name="menu_privacypolicy">Privacy Policy</string>
    <string name="menu_returncancellation">Return &amp; Cancellation</string>
    <string name="menu_requestproduct">Request Product</string>
    <string name="menu_reportissue">Report Issue</string>
    <string name="menu_changelocator">Change Locator</string>
    <string name="menu_mycoupons">My Coupons</string>
    <string name="menu_Notifications">Notifications</string>
    <string name="menu_howitworks">How it Works</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_signout">SIGN OUT</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="text_strike_1"><strike>₹ 900</strike></string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="action_save_reminder">Save</string>
    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_maps_near_store">Map</string>
    <string name="whishlist">Wishlist</string>
    <string name="your_cart_s_empty_n_set_back_add_product_in_cart">Your Cart\'s empty </string>
    <string name="your_wh_s_empty_n_set_back_add_product_in_cart">Your Wishlist\'s empty \n add product in Whishlist</string>
    <string name="look_like_you_haven_t_added_any_product_in_your_cart_yet">look Like You haven\'t added any \n product in your cart yet.</string>
    <string name="your_order_succesfully_placed_thanks_for_using_1ml_services">Your Order has been successfully Placed.\nThanks for using 1ml healthcare Services</string>
    <string name="oneline">*Never lose the digital copy of your prescription .it will be with you wherever you go.</string>
    <string name="second_line">* Is your prescription hard to understand? 1ml vendor will help you in placing your order.</string>
    <string name="third_line">* Details from your prescription are not shared with any third party </string>
    <string name="four_line">* Government regulations require a prescription for ordering some medicines or tests</string>
    <string name="share" />
    <string name="bookmarak">bookmark</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>