<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Ui.LoginPanelActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colordiffblue"
        android:layout_marginBottom="@dimen/margin_conponent"
        android:text="Verify OTP"/>

    <EditText
        android:id="@+id/edtphoneotp"
        android:hint="@string/edt_otp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:inputType="textVisiblePassword"
        android:paddingBottom="12dp"
        android:textSize="15dp"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colordiffblue"
        android:textSize="10dp"
        android:layout_marginBottom="@dimen/margin_conponent"
        android:text="OTP will be send to your mobile"/>


    <Button
        android:id="@+id/btnProceed"
        android:textAllCaps="true"
        android:text="@string/btn_proceed_text"
        android:layout_marginBottom="@dimen/margin_conponent"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/whiteback"
        android:onClick="clickFunction"
        android:background="@color/colorblack"
        android:layout_height="wrap_content" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/txtresendCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colordiffblue"
        android:layout_gravity="center_horizontal"
        android:textSize="10dp"
        android:layout_marginBottom="@dimen/margin_conponent"
        />
    <TextView
        android:id="@+id/txtresend"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colordiffblue"
        android:textSize="10dp"
        android:onClick="clickFunction"
        android:layout_marginBottom="@dimen/margin_conponent"
        android:text="Resend OTP"/>
</LinearLayout>







</LinearLayout>